# jdp

./: CMakeLists.txt  CMakeLists_exe.txt  CMakeLists_linux.txt  README.md  build_jdp.cmake
include/: jobject.h  jserializer.h  jtable.h  jtypes.h
include/jnode/: ijbasic.h  ijnode.h  ijobject.h  jboolnode.h  jfloatnode.h  jintnode.h  jobjectnode.h  jstringnode.h  jtablenode.h
src/: jobject.cpp  jserializer.cpp  jtable.cpp  test.cpp
src/jnode/: jobjectnode.cpp  jtablenode.cpp
